// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mocking ENV Production renders correctly Production 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charSet="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1.0"
      name="viewport"
    />
    <link
      href={Object {}}
      rel="shortcut icon"
    />
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": Object {},
        }
      }
      id="gatsby-inlined-css"
    />
  </head>
  <body>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      id="___gatsby"
    />
  </body>
</html>
`;

exports[`renders correctly 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charSet="utf-8"
    />
    <meta
      content="width=device-width, initial-scale=1.0"
      name="viewport"
    />
    <link
      href={Object {}}
      rel="shortcut icon"
    />
  </head>
  <body>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": undefined,
        }
      }
      id="___gatsby"
    />
  </body>
</html>
`;
